--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="video-card">
                 <img src="video1.jpg" alt="Video Thumbnail">
                 <div class="video-info">
-                    <h4>Video Title 1</h4>
-                    <p>Channel Name</p>
+                    <h4>video unavailable</h4>
+                    <p>taken down</p>
                     <p>1M views • 1 week ago</p>
                 </div>
             </div>
